--- a/.github/workflow/build.yaml
+++ b/.github/workflow/build.yaml
@@ -30,5 +30,5 @@ jobs:
           if pm2 list | grep -q 'rtb-survey-tool'; then
             pm2 restart rtb-survey-tool
           else
-            pm2 start build/index.js --name rtb-survey-tool
+            pm2 start dist/index.js --name rtb-survey-tool
           fi
