--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-BASE_API_URL = https://api-beta.tvetmanagement.rtbdev.online/ETrainerBackend/api/v1
+BASE_API_URL = https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/
