--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # VITE_BASE_API_URL = https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/
-VITE_BASE_API_URL_DEV = https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/
-VITE_BASE_API_URL = https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/
+VITE_BASE_API_URL_DEV = https://api-beta.tvetmanagement.rtbdev.online/ETrainerBackend/api/v1/
+VITE_BASE_API_URL = https://api-beta.tvetmanagement.rtbdev.online/ETrainerBackend/api/v1/
 VITE_BASE_API_URL_LOCAL = http://localhost:8080/ETrainerBackend/api/v1/
-VITE_BASE_API_URL_PROD =https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/
+VITE_BASE_API_URL_PROD = https://api.tvetmanagement.rtb.gov.rw/ETrainerBackend/api/v1/ 
